--- a/newsevaluator/src/components/Fileuploader.scss
+++ b/newsevaluator/src/components/Fileuploader.scss
@@ -1,5 +1,4 @@
 .Ocr{
-    border:2px solid red;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,9 +9,29 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border:2px solid red;
         position: relative;
         overflow: hidden;
+    }
+    .inputcontainer{
+        background-color: #ffffff;
+        box-shadow:0px 0px 8px 10px rgb(199, 198, 196);
+        border:2px solid rgb(189, 186, 186);
+        padding:40px;
+        position:relative;
+    }
+    .inputcontainer::before{
+        content: "";
+        position: absolute;
+        top: 13px; /* Adjust this value to control the spacing between borders */
+        left: 13px; /* Adjust this value to control the spacing between borders */
+        right: 13px; /* Adjust this value to control the spacing between borders */
+        bottom: 13px; /* Adjust this value to control the spacing between borders */
+        border: 1px dashed rgb(212, 207, 207);
+    }
+    .filename{
+        font-size: 18px;
+        font-weight: bold;
+        color:rgb(239, 85, 8);
     }
 .file{
     border:2px solid red;
@@ -34,6 +53,11 @@
         font-weight: bold;
         color: #ffffff;
         text-transform: uppercase;
+}
+.btn{
+    padding:10px;
+    border:1px solid black;
+    border-radius:10px;
 }
 
 }
