--- a/newsevaluator/src/Pages/Login.scss
+++ b/newsevaluator/src/Pages/Login.scss
@@ -1,13 +1,32 @@
+.container-login{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+  background:linear-gradient(#108dc7,#ef8e38);
+
+}
+
+
+
+
 .login-page{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height:100vh;
+  width:300px;
+  background-color: transparent;
+  border:1px solid black;
+  border-radius: 5%;
+  padding:2%;
+  box-shadow: 2px 2px 5px 5px ;
   h1{
-    font-size: 20px;
-    color: teal;
+    font-size: 30px;
+    color: rgb(135, 31, 31);
+    font-weight: bolder;
     margin-bottom: 20px;
+  
   }
   form{
     display: flex;
@@ -15,12 +34,12 @@
     padding: 10px;
     width: 200px;
     gap:20px;
-
   }
   input{
     padding:20px;
     border:none;
     border-bottom: 1px solid gray;
+    border-radius: 10px;
   }
 
   button{
@@ -32,7 +51,7 @@
 
   }
   span{
-    font-size: 12px;
+    font-size: 15px;
     text-align: center;
   }
 
@@ -40,4 +59,8 @@
     font-size: 12px;
     color: red;
   }
+}
+.registernav:hover{
+  font-size: 20px;
+  color:rgb(0, 128, 9);
 }
