--- a/newsevaluator/src/components/Dictionary.scss
+++ b/newsevaluator/src/components/Dictionary.scss
@@ -1,6 +1,6 @@
 .custom-tooltip {
     position: absolute;
-    background-color: white;
+    background-color:transparent;
     border: 1px solid #ccc;
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -19,8 +19,11 @@
   }
   .content-container{
     line-height: 25px;
+    margin:4%;
+    background-color: white;
+    border:2px solid black;
+    min-height: 140px;
   }
   .interactive-word{
-    border: 1px solid black;
     padding:2px;
   }
