--- a/newsevaluator/src/components/Fileuploader.scss
+++ b/newsevaluator/src/components/Fileuploader.scss
@@ -4,8 +4,10 @@
     justify-content: center;
     align-items: center;
     gap:2rem;
+    padding-bottom:25px;
+    padding-top: 15px;
     .input{
-        height: 200px;
+        min-height: 200px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -58,6 +60,74 @@
     padding:10px;
     border:1px solid black;
     border-radius:10px;
+    background-color: #4b52cf;
+    color:white;
+    margin-top:30px;
+    box-shadow:0px 0px 2px 4px #c7c6c4;
 }
+
+
+}
+.color-line{
+    height:3px;
+    background:linear-gradient(90deg,rgb(43, 114, 132),rgb(64, 173, 60),rgb(182, 34, 155));
+    margin-bottom:40px;
+}
+
+
+.animationcontainer{
+
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    min-height:100vh;
+}
+.svg{
+    position:relative;
+    width:150px;
+    height:150px;
+    animation:rotate 2s linear infinite;
+}
+
+@keyframes rotate
+{
+   0%
+   {
+     transform: rotate(0deg);
+   }
+   100%
+   {
+    transform: rotate(360deg);
+   }
+
+}
+.svg circle
+{
+    width:100%;
+    height:100%;
+    fill:none;
+    stroke-width:10;
+    stroke:#00a1ff;
+    stroke-linecap:round;
+    transform:translate(5px,5px);
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;
+    animation: animate 4s linear infinite;
+}
+
+@keyframes animate 
+{
+    0%,100%
+    {
+        stroke-dashoffset: 440;
+    }
+    50%
+    {
+        stroke-dashoffset: 0;
+    }
+    50.1%
+    {
+        stroke-dashoffset: 880;
+    }
 
 }
