--- a/newsevaluator/src/components/Dictionary.scss
+++ b/newsevaluator/src/components/Dictionary.scss
@@ -1,9 +1,12 @@
 .custom-tooltip {
     position: absolute;
-    background-color:transparent;
+    background-color:rgba(255, 255, 255, 0.915);
     border: 1px solid #ccc;
     padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    min-width:200px;
+    border-radius: 20px;
+    box-shadow: 0 0 5px 7px rgb(131, 131, 134);
     z-index: 100;
   }
   
@@ -19,7 +22,7 @@
   }
   .content-container{
     line-height: 25px;
-    margin:4%;
+    margin:10px 4% 20px;
     background-color: white;
     border:2px solid black;
     min-height: 140px;
@@ -27,3 +30,32 @@
   .interactive-word{
     padding:2px;
   }
+  .close-button{
+    display: flex;
+    justify-content:space-between;
+  }
+  
+  .close-icon{
+    display: block;
+  }
+  .close-icon:hover{
+    background-color: rgb(255, 17, 0);
+  }
+  .word{
+    font-weight: bolder;
+    font-size: large;
+  }
+  .pronun{
+    display:flex;
+    justify-content: center;
+    gap:5px;
+    .tit{
+      font-weight: bolder;
+      font-size: medium;
+    }
+  }
+  .custom-tooltip h4{
+    font-weight: bolder;
+    font-size: medium;
+  }
+  
