--- a/newsevaluator/src/components/Fileuploader.scss
+++ b/newsevaluator/src/components/Fileuploader.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family:'Times New Roman', Times, serif;
     gap:2rem;
     padding-bottom:25px;
     padding-top: 15px;
@@ -13,6 +14,9 @@
         align-items: center;
         position: relative;
         overflow: hidden;
+    }
+    .heading{
+        font-family:monospace;
     }
     .inputcontainer{
         background-color: #ffffff;
@@ -64,6 +68,7 @@
     color:white;
     margin-top:30px;
     box-shadow:0px 0px 2px 4px #c7c6c4;
+    margin-right: 8px;
 }
 
 
