--- a/newsevaluator/src/components/navbar.scss
+++ b/newsevaluator/src/components/navbar.scss
@@ -1,4 +1,5 @@
 .navcontainer{
     background-color:rgba(255,255,255);
     border-bottom:1px solid rgb(28, 206, 206);   
+    font-family: Arial, Helvetica, sans-serif;
 }
