--- a/newsevaluator/src/components/newssearcher.scss
+++ b/newsevaluator/src/components/newssearcher.scss
@@ -1,10 +1,75 @@
-.SearchContainer{
-    padding:10px;
-    padding-top: 0;
-    text-align: center;
-    .input-Container{
-        padding-bottom: 10px;
-        background-color: aqua;
+.news-searcher {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+  
+    form {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+  
+      input[type="text"] {
+        height: 40px;
+        font-size: 20px;
+        padding: 0 10px;
+        border-radius: 8px 0 0 8px;
+        border: 1px solid #ccc;
+        white-space: normal;
+      }
+  
+      button {
+        
+        height: 40px;
+        font-size: 20px;
+        background-color: #4b52cf;
+        color: #fff;
+        border: none;
+        padding:3px;
+        border-radius: 0 5px 5px 0;
+        cursor: pointer;
+      }
     }
-    
-}
+    .card-container{
+        display:flex;
+        justify-content: center;
+        flex-wrap:wrap;
+        margin-top:50px;
+    }
+    .load-more {
+        background-color: blue;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        width: 100%;
+      }
+      .clear-button {
+        background-color: transparent;
+        border: 2px solid #000;
+        font-family: 'Arial', sans-serif;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: #000;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        width: 60%;
+        transition: all 0.3s ease;
+      
+        &:hover {
+          background-color: #000;
+          color: #fff;
+        }
+      }
+  }
