--- a/newsevaluator/src/components/ImageNewssearcher.scss
+++ b/newsevaluator/src/components/ImageNewssearcher.scss
@@ -1,3 +1,14 @@
+.image{
+  width:100%;
+}
+
+.photoSelector{
+  display:flex;
+  justify-content: center;
+  margin-top:20px;
+  gap:8px;
+}
+
 .button{
   display: inline-block;
       padding: 12px 30px;
@@ -15,15 +26,13 @@
   border-radius:10px;
   background-color: #4b52cf;
   color:white;
-  margin-top:30px;
   box-shadow:0px 0px 2px 4px #c7c6c4;
-  margin-right: 8px;
 }
 .card-container{
   display:flex;
   justify-content: center;
   flex-wrap:wrap;
-  margin-top:50px;
+  margin-top:20px;
 }
 .load-more {
   background-color: blue;
